--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
                     <div class="col-lg-4 wow fadeInUp" data-wow-delay="0.3s">
                         <div class="feature-item bg-light rounded text-center p-4">
                             <i class="fas fa-3x fa-question-circle text-primary mb-4"></i>
-                            <h5 class="mb-3">Lorem Ipsum</h5>
+                            <h5 class="mb-3">Lorem Ipsum.</h5>
                             <p class="m-0">Erat ipsum justo amet duo et elitr dolor, est duo duo eos lorem sed diam stet diam sed stet lorem.</p>
                         </div>
                     </div>
