tabs section added

--- a/index.html
+++ b/index.html
@@ -138,6 +138,46 @@
         </div>
         <!-- Feature End -->
 
+        <section class="contact-section section-padding my-5" id="section_6" >
+            <div class="container">
+                <div class="row">
+
+                    <div class="col-lg-12 col-12 mx-auto">
+                        <h2 class="text-center mb-4 wow fadeInLeft" data-wow-delay="0.3s">Interested? Let's talk</h2>
+
+                        <nav class="d-flex justify-content-center wow fadeInLeft" data-wow-delay="0.3s">
+                            <div class="nav nav-tabs align-items-baseline justify-content-center" id="nav-tab"
+                                role="tablist">
+                                <button class="nav-link active" id="nav-ContactForm-tab" data-bs-toggle="tab"
+                                    data-bs-target="#nav-ContactForm" type="button" role="tab"
+                                    aria-controls="nav-ContactForm" aria-selected="false">
+                                    <h5>Section 1</h5>
+                                </button>
+
+                                <button class="nav-link" id="nav-ContactMap-tab" data-bs-toggle="tab"
+                                    data-bs-target="#nav-ContactMap" type="button" role="tab"
+                                    aria-controls="nav-ContactMap" aria-selected="false">
+                                    <h5>Section 2</h5>
+                                </button>
+                            </div>
+                        </nav>
+
+                        <div class="tab-content shadow-lg mt-5 wow fadeInRight" id="nav-tabContent" data-wow-delay="0.5s">
+                            <div class="tab-pane fade show active" id="nav-ContactForm" role="tabpanel"
+                                aria-labelledby="nav-ContactForm-tab">
+                                <h2 class="fw-bold">Section 1</h2>
+                            </div>
+
+                            <div class="tab-pane fade" id="nav-ContactMap" role="tabpanel"
+                                aria-labelledby="nav-ContactMap-tab">
+                            <h2 class="fw-bold">Section 2</h2>
+                            </div>
+                        </div>
+                    </div>
+
+                </div>
+            </div>
+        </section>
 
         <!-- About Start -->
         <div class="container-xxl py-5">
