--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
                 <div class="row">
 
                     <div class="col-lg-12 col-12 mx-auto">
-                        <h2 class="text-center mb-4 wow fadeInLeft" data-wow-delay="0.3s">Interested? Let's talk</h2>
+                        <h2 class="text-center mb-4 wow fadeInLeft" data-wow-delay="0.3s">Content Section</h2>
 
                         <nav class="d-flex justify-content-center wow fadeInLeft" data-wow-delay="0.3s">
                             <div class="nav nav-tabs align-items-baseline justify-content-center" id="nav-tab"
