--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                         <a href="#" class="nav-item nav-link">Link 4</a>
                         <a href="#" class="nav-item nav-link">Link 5</a>
                     </div>
-                    <a href="" class="btn rounded-pill py-2 px-4 ms-3 d-none d-lg-block">Button 1</a>
+                    <a href="order.html" class="btn rounded-pill py-2 px-4 ms-3 d-none d-lg-block">Book Now</a>
                 </div>
             </nav>
 
@@ -229,22 +229,22 @@
         <div class="container-xxl mx-auto rounded bg-primary fact py-5 wow fadeInUp" data-wow-delay="0.1s">
             <div class="container py-5 px-lg-5">
                 <div class="row g-4">
-                    <div class="col-md-6 col-lg-3 text-center wow fadeIn" data-wow-delay="0.1s">
+                    <div class="col-6 col-md-6 col-lg-3 text-center wow fadeIn" data-wow-delay="0.1s">
                         <i class="fa fa-certificate fa-3x text-secondary mb-3"></i>
                         <h1 class="text-white mb-2" data-toggle="counter-up">1234</h1>
                         <p class="text-white mb-0">Years Experience</p>
                     </div>
-                    <div class="col-md-6 col-lg-3 text-center wow fadeIn" data-wow-delay="0.3s">
+                    <div class="col-6 col-md-6 col-lg-3 text-center wow fadeIn" data-wow-delay="0.3s">
                         <i class="fa fa-users-cog fa-3x text-secondary mb-3"></i>
                         <h1 class="text-white mb-2" data-toggle="counter-up">1234</h1>
                         <p class="text-white mb-0">Team Members</p>
                     </div>
-                    <div class="col-md-6 col-lg-3 text-center wow fadeIn" data-wow-delay="0.5s">
+                    <div class="col-6 col-md-6 col-lg-3 text-center wow fadeIn" data-wow-delay="0.5s">
                         <i class="fa fa-users fa-3x text-secondary mb-3"></i>
                         <h1 class="text-white mb-2" data-toggle="counter-up">1234</h1>
                         <p class="text-white mb-0">Satisfied Clients</p>
                     </div>
-                    <div class="col-md-6 col-lg-3 text-center wow fadeIn" data-wow-delay="0.7s">
+                    <div class="col-6 col-md-6 col-lg-3 text-center wow fadeIn" data-wow-delay="0.7s">
                         <i class="fa fa-check fa-3x text-secondary mb-3"></i>
                         <h1 class="text-white mb-2" data-toggle="counter-up">1234</h1>
                         <p class="text-white mb-0">Compleate Projects</p>
