Process Steps Added

--- a/index.html
+++ b/index.html
@@ -84,6 +84,32 @@
         <!-- Navbar & Hero End -->
 
 
+        <!-- Process Steps Start Here -->
+        <div class="container py-5">
+            <h2 class="fs-1 text-center mb-5">How Things Works</h2>
+            <div class="row row-cols-1 row-cols-3 g-4 ">
+                <div class="col">
+                    <div class="step-box">
+                        <h3 class="mb-3 fs-2">Lorem, ipsum.</h3>
+                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Maiores aspernatur maxime delectus quis expedita beatae repudiandae vero culpa eaque, adipisci officia cupiditate omnis labore rerum excepturi natus provident, perferendis esse? Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto, reprehenderit voluptatum dicta recusandae tempore praesentium cum ut error illo dolorem!</p>
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="step-box">
+                        <h3 class="mb-3 fs-2">Lorem, ipsum.</h3>
+                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Maiores aspernatur maxime delectus quis expedita beatae repudiandae vero culpa eaque, adipisci officia cupiditate omnis labore rerum excepturi natus provident, perferendis esse? Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto, reprehenderit voluptatum dicta recusandae tempore praesentium cum ut error illo dolorem!</p>
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="step-box">
+                        <h3 class="mb-3 fs-2">Lorem, ipsum.</h3>
+                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Maiores aspernatur maxime delectus quis expedita beatae repudiandae vero culpa eaque, adipisci officia cupiditate omnis labore rerum excepturi natus provident, perferendis esse? Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto, reprehenderit voluptatum dicta recusandae tempore praesentium cum ut error illo dolorem!</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <!-- Process Steps End Here -->
+
         <!-- Feature Start -->
         <div class="container-xxl py-5">
             <div class="container py-5 px-lg-5">
