--- a/index.html
+++ b/index.html
@@ -523,8 +523,26 @@
 
 
         <!-- Back to Top -->
-        <a href="#" class="btn btn-lg btn-secondary btn-lg-square back-to-top"><i class="bi bi-arrow-up"></i></a>
+        <!-- <a href="#" class="btn btn-lg btn-secondary btn-lg-square back-to-top"><i class="bi bi-arrow-up"></i></a> -->
     </div>
+
+    <div class="whatsAppCTAWrp wbox">
+        <p> <a href="javascript:void(0);" onclick="gtag_report_conversion();">
+                <span class="whtIcon"><img src="./assets/images/whatsapp-brands (1).webp" alt="TAFE help whatsapp"></span> <span class="whatsAppText"><strong>Tap to
+                        Chat</strong><small>Get TAFE Assignment Help</small></span></a>
+        </p>
+    </div>
+    <script>
+        function gtag_report_conversion() {
+            var gtag_url = 'https://api.whatsapp.com/send?phone=61493535569&text=I%20Need%20Help!!';
+            window.open(gtag_url, "_blank", "width=800, height=650");
+            return false;
+        }
+    </script>
+    
+
+<script>(function(w, d) { w.CollectId = "62286d64bc2315111d709c06"; var h = d.head || d.getElementsByTagName("head")[0]; var s = d.createElement("script"); s.setAttribute("type", "text/javascript"); s.async=true; s.setAttribute("src", "https://collectcdn.com/launcher.js"); h.appendChild(s); })(window, document);</script>
+
 
     <!-- JavaScript Libraries -->
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
